2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp:
	  Updated project files. The order of extended properties won't change
	  anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml:
	  Bump add-in versions.

2007-12-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.VersionControl.Subversion/Makefile.am: Fix trivial warning.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Use lazy initialisation rather than a static constructor. Log a message
	  to tell the user if the SVN add is disabled. Implement IDisposable in
	  addition to finaliser. Minor optimisation to release the LibSvnClient if
	  LibApr can't be loaded.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic: Updated.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibApr.cs:
	  Check if Subversion is installed in a nicer way. Fixes bug #342507.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Diff/Diff.mdp, MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp,
	  DiffWidget/DiffWidget.mdp: Directory reorganization.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionRepository.cs:
	  In some cases it may be possible to natively move files between two